web commit by joey

--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -1,1 +1,14 @@
-Ikiwiki is _not_ yet formally released, although it's very close to being ready for a release now. If you really have to have it: `svn://svn.kitenet.net/ikiwiki/trunk`
+## tarball
+
+Currently the tarball for the 1.0 release is available for download from [here](http://kitenet.net/~joey/debian/unstable/ikiwiki_1.0.tar.gz).
+
+## Debian package
+
+While ikiwiki is being added to Debian, the deb can be downloaded from [here](http://kitenet.net/~joey/debian/unstable/ikiwiki_1.0_all.deb).
+
+While this deb has been developed on Debian unstable, it should also work on stable, although you might need to upgrade to a newer version of libcgi-formbuilder-perl.
+
+## subversion
+
+The current development version of ikiwiki can be accessed using subversion at 
+`svn://svn.kitenet.net/ikiwiki/trunk`
