web commit by joey

--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -7,7 +7,7 @@ Generally usable release.
 * No severe [[security]] bugs.
 * All the [[features]] people would expect in a wiki. Needs to be a plausable promise of being a wiki that people can commit to [[using|ikiwikiusers]].
 
-Estimated ETA for 1.0 is May 2006.
+Released 29 April 2006.
 
 # 2.0
 
