web commit by joey

--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -2,9 +2,7 @@ So you want to set up your own wiki using ikiwiki? This turorial will walk
 you through setting up a wiki that is stored in [[Subversion]] and that has
 optional support for commits from the web.
 
-1. [[Install]] ikiwiki.
-
-		apt-get install ikiwiki # soon
+1. [[Install]] ikiwiki. See [[download]] for where to get it.
 
    Ikiwiki requires [[MarkDown]] be installed, and also uses the following
    perl modules: `CGI::Session` `CGI::FormBuilder` (version 3.02.02 or
