web commit by joey

--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -6,7 +6,7 @@ Currently the tarball for the 1.0 release is available for download from [here](
 
 While ikiwiki is being added to Debian, the deb can be downloaded from [here](http://kitenet.net/~joey/debian/unstable/ikiwiki_1.0_all.deb).
 
-While this deb has been developed on Debian unstable, it should also work on stable, although you might need to upgrade to a newer version of libcgi-formbuilder-perl.
+While this deb has been developed on Debian unstable, it should also work on stable, although to get the CGI stuff working on stable, you will need to upgrade to a newer version of libcgi-formbuilder-perl, `3.02.02`.
 
 ## subversion
 
