web commit by joey

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -7,3 +7,4 @@ This page is to track users of ikiwiki.
 * David's [Master's Thesis wiki](https://dipl.black.co.at/wiki/) (german)
 * Ulrik's [small collection of small apps](http://www.student.lu.se/~cif04usv/wiki/)
 * [kite](http://kitenet.net)
+* [Bright Cloud](http://brightcloud.lcsee.wvu.edu/), a project of WVU LCSEE
