--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -1,3 +1,5 @@
+Here's how to get ikiwiki. See [[setup]] for how to use it, and be sure to add your page to [[ikiwikiusers]] if you use ikiwiki.
+
 ## tarball
 
 Currently the tarball for the 1.0 release is available for download from [here](http://kitenet.net/~joey/debian/unstable/ikiwiki_1.0.tar.gz).
