web commit by joey

--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -11,7 +11,7 @@ Released 29 April 2006.
 
 # 2.0
 
-* Plugin mechanism. See [[todo/PluggableRenderers]]. Should support things like [[todo/lists]] and [[todo/link_map]].
+* [[todo/Plugin]] mechanism. 
 * Should have fully working [[todo/utf8]] support.
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other scalability issues.
 * improved [[todo/html]] stylesheets and templates
