web commit by joey

--- a/doc/todo/link_map.mdwn
+++ b/doc/todo/link_map.mdwn
@@ -1,4 +1,4 @@
 An idea: Use graphviz to generate a map of all the links between pages.
 (Could it be made clickable somehow?)
 
-Probably only after [[PluggableRenderers]]
+This could be a [[plugin]].
