web commit by joey

--- a/doc/todo/pageindexes.mdwn
+++ b/doc/todo/pageindexes.mdwn
@@ -1,2 +1,2 @@
 Might be nice to support automatically generating an index based on headers
-in a page, for long pages. The question is, how to turn on such an index?
+in a page, for long pages. The question is, how to turn on such an index? Well, make it a [[plugin]] enabled by a [[preprocessordirective]].
