--- a/doc/todo/sigs.mdwn
+++ b/doc/todo/sigs.mdwn
@@ -9,3 +9,4 @@ design goals for ikiwiki: keeping as much markup as possible out of the
 wiki and not adding nonstandard markup. And it's not significantly hard to
 type "--\[[Joey]]", and as to the date, we do have page history.
 
+Perhaps just let it be a [[plugin]].
