web commit by joey

--- a/doc/todo/lists.mdwn
+++ b/doc/todo/lists.mdwn
@@ -1,8 +1,7 @@
 * list of all missing pages
 
-  This could be its own static pages updated when other pages are updated.
-  Perhaps this ties in with the [[pluggablerenderers]]?
+  Could be a [[plugin]].
 
 * list of registered users, with the names being links to any userpages.
 
-  Could be implemented with a [[preprocessordirective]], which suggests that there needs to be some sort of plugin interface for new preprocessordirectives.
+  Could be implemented with a [[preprocessordirective]], which suggests that there needs to be some sort of plugin interface for new preprocessordirectives. Although, how to let the wiki know that the page needs an update whever a new user is added?
