--- a/doc/todo/plugin.mdwn
+++ b/doc/todo/plugin.mdwn
@@ -8,6 +8,7 @@ A plugin system should ideally support things like:
 * [[pageindexes]]
 * Wiki stats, such as the total number of pages, total number of links, most linked to pages, etc, etc.
 * wiki info page, giving the ikiwiki version etc
+* would it be useful to reimplement the hyperestradier search integration as a plugin?
 * etc
 
 Another, separate plugin system that already (mostly) exists in ikiwiki is the RCS backend, which allows writing modules to drive other RCS systems than subversion.
@@ -32,3 +33,6 @@ See <http://moinmoin.wikiwikiweb.de/MoinDev/PluginConcept>
 * *parsers* and *formatters* are basically what I've been calling [[PluggableRenderers]]. MoinMoin separates these, so that a page is parsed to (presumbly) some intermediate form before being output as html or some other form. That's a nice separation, but what to do about things like markdown that are both a parser and a formatter?
 * *macros* and *processors* are analagous to preprocessor directives. A processor can operate on a large block of text though.
 * *themes* should be irrellevant (ikiwiki has [[templates]]).
+
+## case study: pybloxsom plugins
+
