* Rename inlinepage to depends, so that it can be used to refer to more   dependency relationships than just inlining. This will require a rebuild   on upgrade to this version. * Move the rss link, put it in the blogpost form if there is one and at the   top if not. This is both nicer because easier to find, and it cleans up   the code which had used inlinepage as a flag for adding the link later. * Allow the depends GlobList to be built up from multiple sources (such as   plugins) during a page render. * Which means that more than one blog is now supported to appear on a   single page. (With some limitations.)

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -7,3 +7,9 @@ Welcome to ikiwiki's todo list. Items are moved to [[todo/done]] when done.
 # Full list of open items:
 
 [[inline pages="todo/* !todo/done* !*/Discussion" archive="yes"]]
+
+----
+
+Test:
+
+[[inline pages="news/* !*/Discussion" rootpage="news" show="30"]]
