--- a/basewiki/helponformatting.mdwn
+++ b/basewiki/helponformatting.mdwn
@@ -38,7 +38,7 @@ To quote someone, prefix the quote with ">":
 > To be or not to be,
 > that is the question.
 
-To write a code block, indent each line with a tab:
+To write a code block, indent each line with a tab or 8 spaces:
 
 	10 PRINT "Hello, world!"
 	20 GOTO 10
