--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+ikiwiki (1.1) UNRELEASED; urgency=low
+
+  * Rename inlinepage to depends, so that it can be used to refer to more
+    dependency relationships than just inlining. This will require a rebuild
+    on upgrade to this version.
+  * Move the rss link, put it in the blogpost form if there is one and at the
+    top if not. This is both nicer because easier to find, and it cleans up
+    the code which had used inlinepage as a flag for adding the link later.
+  * Allow the depends GlobList to be built up from multiple sources (such as
+    plugins) during a page render.
+  * Which means that more than one blog is now supported to appear on a
+    single page. (With some limitations.)
+
+ -- Joey Hess <joeyh@debian.org>  Mon,  1 May 2006 18:21:16 -0400
+
 ikiwiki (1.0) unstable; urgency=low
 
   * First official release.
