--- a/doc/templates.mdwn
+++ b/doc/templates.mdwn
@@ -24,6 +24,8 @@ It ships with some basic templates which can be customised:
 * `estseek.conf` - Not a html template, this is actually a template for
   a config file for the [[HyperEstraier]] search engine. If you like you
   can read the [[HyperEstraier]] docs and configure it using this.
+* `blogpost.tmpl` - Used for a form to add a post to a blog (and a rss link)
+* `rsslink.tmpl` - Used to add a rss link if blogpost.tmpl is not used.
 
 If you like, you can add these to further customise it:
 
