--- a/doc/templates.mdwn
+++ b/doc/templates.mdwn
@@ -6,20 +6,20 @@ The aim is to keep almost all html out of ikiwiki and in the templates.
 
 It ships with some basic templates which can be customised:
 
-* `templates/page.tmpl` - Used for displaying all regular wiki pages.
-* `templates/misc.tmpl` - Generic template used for any page that doesn't
+* `page.tmpl` - Used for displaying all regular wiki pages.
+* `misc.tmpl` - Generic template used for any page that doesn't
   have a custom template.
-* `templates/recentchanges.tmpl` - Used for the RecentChanges page.
-* `templates/editpage.tmpl` - Create/edit page.
-* `templates/notifymail.tmpl` - Not a html template, this is used to
+* `recentchanges.tmpl` - Used for the RecentChanges page.
+* `editpage.tmpl` - Create/edit page.
+* `notifymail.tmpl` - Not a html template, this is used to
   generate change notification mails for users who have subscribed to
   changes to a page.
-* `templates/passwordmail.tmpl` - Not a html template, this is used to
+* `passwordmail.tmpl` - Not a html template, this is used to
   generate the mail with the user's password in it.
-* `templates/rsspage.tmpl` - Used for generating rss feeds for [[blog]]s.
-* `templates/inlinepage.tmpl` - Used for adding a page inline in a blog
+* `rsspage.tmpl` - Used for generating rss feeds for [[blog]]s.
+* `inlinepage.tmpl` - Used for adding a page inline in a blog
   page.
-* `templates/inlinepagetitle.tmpl` - Used for listing a page inline in a blog
+* `inlinepagetitle.tmpl` - Used for listing a page inline in a blog
   archive page.
 * `estseek.conf` - Not a html template, this is actually a template for
   a config file for the [[HyperEstraier]] search engine. If you like you
@@ -29,10 +29,10 @@ It ships with some basic templates which can be customised:
 
 If you like, you can add these to further customise it:
 
-* `templates/signin.tmpl` - If it exists, it is used for customising the
+* `signin.tmpl` - If it exists, it is used for customising the
   layout of the SignIn form and all assciated forms. The misc.tmpl is
   wrapped around this, so it should only be a template for the form.
-* `templates/prefs.tmpl` - If it exists, it is used for customising the
+* `prefs.tmpl` - If it exists, it is used for customising the
   layout of the Prefs form and all assciated forms. The misc.tmpl is
   wrapped around this, so it should only be a template for the form.
   
