--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -61,7 +61,8 @@ Some of ikiwiki's features:
 
 * [[BackLinks]]
 
-  Automatically included on pages. Rather faster than eg [[MoinMoin]] and always there to help with navigation.
+  Automatically included on pages. Rather faster than eg MoinMoin and
+  always there to help with navigation.
 
 * [[PageHistory]]
 
@@ -114,6 +115,10 @@ Some of ikiwiki's features:
 
   ikiwiki can be configured to send you commit mails with diffs of changes
   to selected pages.
+
+* [[Plugins]]
+
+  A plugin system allows extending ikiwiki in arbitrary ways.
 
 ----
 
