--- a/doc/todo/lists.mdwn
+++ b/doc/todo/lists.mdwn
@@ -1,7 +1,8 @@
 * list of all missing pages
 
-  Could be a [[plugin]].
+  done
 
 * list of registered users, with the names being links to any userpages.
 
-  Could be implemented with a [[preprocessordirective]], which suggests that there needs to be some sort of plugin interface for new preprocessordirectives. Although, how to let the wiki know that the page needs an update whever a new user is added?
+  Might be a plugin, but how to let the wiki know that the page
+  needs an update whever a new user is added?
