--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -22,6 +22,6 @@ the `--plugin` switch described in [[usage]], or the equivilant line in
 
 ## Plugin directory
 
-Add your contributed plugins using this form:
+Add your contributed plugins here.
 
 [[inline pages="plugins/* !plugins/write !*/Discussion" archive="yes" rootpage="plugins/contrib" show="30"]]
