--- a/debian/changelog
+++ b/debian/changelog
@@ -20,8 +20,10 @@ ikiwiki (1.1) UNRELEASED; urgency=low
     enabled by default.
   * Added brokenlinks plugin, not enabled by default, but rather handy.
   * Fix several broken links in the doc wiki.
+  * Smarter behavior when creating a page and a page of the same name (but
+    different location) already exists.
 
- -- Joey Hess <joeyh@debian.org>  Mon,  1 May 2006 21:01:12 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon,  1 May 2006 22:57:04 -0400
 
 ikiwiki (1.0) unstable; urgency=low
 
