web commit by DavidMorenoGarza: Adding myself as user

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -8,3 +8,4 @@ This page is to track users of ikiwiki.
 * Ulrik's [small collection of small apps](http://www.student.lu.se/~cif04usv/wiki/)
 * [kite](http://kitenet.net)
 * [Bright Cloud](http://brightcloud.lcsee.wvu.edu/), a project of WVU LCSEE
+* [David Moreno Garza's personal wiki](http://anorak.com.ve/~damog/wiki)
