--- a/debian/changelog
+++ b/debian/changelog
@@ -22,8 +22,10 @@ ikiwiki (1.1) UNRELEASED; urgency=low
   * Fix several broken links in the doc wiki.
   * Smarter behavior when creating a page and a page of the same name (but
     different location) already exists.
+  * Add an orphans plugin for finding pages that nothing links to.
+  * Removed backlinks page, which it turns out nothing used.
 
- -- Joey Hess <joeyh@debian.org>  Mon,  1 May 2006 22:57:04 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue,  2 May 2006 01:45:34 -0400
 
 ikiwiki (1.0) unstable; urgency=low
 
