web commit by joey

--- a/doc/plugins/write.mdwn
+++ b/doc/plugins/write.mdwn
@@ -60,7 +60,7 @@ use the following hashes, using a page name as the key:
 * `%IkiWiki::links` lists the names of each page
   that a page links to, in an array reference.
 * `%IkiWiki::pagemtime` contains the last modification time of each page
-* `%IkiWiki::pagectime` contains the creation time of each page`
+* `%IkiWiki::pagectime` contains the creation time of each page
 * `%IkiWiki::renderedfiles` contains the name of the file rendered by a
   page
 * `%IkiWiki::pagesources` contains the name of the source file for a page.
