* Split off an IkiWiki.pm out of ikiwiki and have all the other modules use   it, this will allow for adding a unit test suite.

--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -11,6 +11,8 @@ Released 29 April 2006.
 
 # 2.0
 
+* Unit test suite (with tests of at least core stuff like
+  [[GlobList]]).
 * [[todo/Plugin]] mechanism. 
 * Should have fully working [[todo/utf8]] support.
 * [[Optimised_rendering|todo/optimisations]] if possible. Deal with other scalability issues.
