--- a/debian/changelog
+++ b/debian/changelog
@@ -24,8 +24,10 @@ ikiwiki (1.1) UNRELEASED; urgency=low
     different location) already exists.
   * Add an orphans plugin for finding pages that nothing links to.
   * Removed backlinks page, which it turns out nothing used.
+  * Split off an IkiWiki.pm out of ikiwiki and have all the other modules use
+    it, this will allow for adding a unit test suite.
 
- -- Joey Hess <joeyh@debian.org>  Tue,  2 May 2006 01:45:34 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue,  2 May 2006 02:51:06 -0400
 
 ikiwiki (1.0) unstable; urgency=low
 
