--- a/debian/changelog
+++ b/debian/changelog
@@ -26,8 +26,9 @@ ikiwiki (1.1) UNRELEASED; urgency=low
   * Removed backlinks page, which it turns out nothing used.
   * Split off an IkiWiki.pm out of ikiwiki and have all the other modules use
     it, this will allow for adding a unit test suite.
+  * Add a unit test for globlist_match().
 
- -- Joey Hess <joeyh@debian.org>  Tue,  2 May 2006 02:51:06 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue,  2 May 2006 03:03:21 -0400
 
 ikiwiki (1.0) unstable; urgency=low
 
