--- a/debian/changelog
+++ b/debian/changelog
@@ -27,8 +27,9 @@ ikiwiki (1.1) UNRELEASED; urgency=low
   * Split off an IkiWiki.pm out of ikiwiki and have all the other modules use
     it, this will allow for adding a unit test suite.
   * Add a unit test for globlist_match().
+  * Smart globlist merging.
 
- -- Joey Hess <joeyh@debian.org>  Tue,  2 May 2006 03:03:21 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue,  2 May 2006 10:56:33 -0400
 
 ikiwiki (1.0) unstable; urgency=low
 
