* Patch from Thomas Schwinge to switch from --svn to --rcs=svn, etc,   to pave the way for adding other RCS support. This also changes the   setup files, where before they had svn => 1 or svn => 0, now they have   rcs => "svn" or rcs => "". * Add a debian/NEWS file with upgrade notes. * Load whatever rcs module is specified, so new ones can be just dropped in   as plugins and work. * Add some basic docs about writing RCS modules.

--- a/doc/plugins/write.mdwn
+++ b/doc/plugins/write.mdwn
@@ -71,3 +71,13 @@ use the following hashes, using a page name as the key:
   Many plugins will need to add dependencies to this hash; the best way to do
   it is by using the IkiWiki::add_depends function, which takes as its
   parameters the page name and a [[GlobList]] of dependencies to add.
+
+## RCS plugins
+
+ikiwiki's support for revision control systems also uses pluggable perl
+modules. These are in the `IkiWiki::RCS` namespace, for example
+`IkiWiki::RCS::svn`. 
+
+Each RCS plugin must support all the IkiWiki::rcs_* functions.
+See IkiWiki::RCS::Stub for the full list of functions. It's ok if
+rcs_getctime does nothing except for throwing an error.
