--- a/debian/changelog
+++ b/debian/changelog
@@ -28,8 +28,16 @@ ikiwiki (1.1) UNRELEASED; urgency=low
     it, this will allow for adding a unit test suite.
   * Add a unit test for globlist_match().
   * Smart globlist merging.
+  * Patch from Thomas Schwinge to switch from --svn to --rcs=svn, etc,
+    to pave the way for adding other RCS support. This also changes the
+    setup files, where before they had svn => 1 or svn => 0, now they have
+    rcs => "svn" or rcs => "".
+  * Add a debian/NEWS file with upgrade notes.
+  * Load whatever rcs module is specified, so new ones can be just dropped in
+    as plugins and work.
+  * Add some basic docs about writing RCS modules.
 
- -- Joey Hess <joeyh@debian.org>  Tue,  2 May 2006 10:56:33 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue,  2 May 2006 14:13:59 -0400
 
 ikiwiki (1.0) unstable; urgency=low
 
