--- a/doc/plugins.mdwn
+++ b/doc/plugins.mdwn
@@ -1,13 +1,14 @@
-Plugins can be used to add additional features to ikiwiki. It's possible to
-[[write]] your own plugins, or you can install and use plugins contributed by
-others. 
+Plugins can be used to add additional features to ikiwiki. Ikiwiki's
+backend RCS support is also pluggable, so support for new revision control
+systems can be added to ikiwiki. It's possible to [[write]] your own plugins,
+or you can install and use plugins contributed by others. 
 
 The ikiiki package includes some standard plugins that are installed and
 by default. These include [[inline]], [[pagecount]], and [[brokenlinks]].
 Of these, [[inline]] is enabled by default.
 
-To enable other plugins, use the `--plugin` switch described in [[usage]], or the equivilant line in
-[[ikiwiki.setup]].
+To enable other plugins, use the `--plugin` switch described in [[usage]],
+or the equivalent line in [[ikiwiki.setup]].
 
 ## Plugin directory
 
