web commit by Bug

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -16,7 +16,7 @@ Here's another one with *emphasised* text.
 >
 > > This is nested blockquote.
 >
->> Does this also work? -- It does.
+>> And without a space works too.
 >
 > Back to the first level.
 
