--- a/doc/plugins/write.mdwn
+++ b/doc/plugins/write.mdwn
@@ -33,6 +33,20 @@ Each time the directive is processed, the referenced function (`preprocess` in t
 as named parameters as well. Whatever the function returns goes onto the
 page in place of the directive.
 
+### Error handing
+
+While a plugin can call ikiwiki's error routine for a fatal error, for
+errors that aren't intended to halt the entire wiki build, including bad
+parameters passed to a [[PreProcessorDirective]], etc, it's better to just
+return the error message as the output of the plugin.
+
+### Html issues
+
+Note that if [[HTMLSanitization]] is enabled, html in 
+[[PreProcessorDirective]] output is sanitised, which may limit what your
+plugin can do. Also, the rest of the page content is not in html format at
+preprocessor time. Text output by a preprocessor directive will be passed through markdown along with the rest of the page.
+
 ## Other types of hooks
 
 Beyond PreProcessorDirectives, Other types of hooks that can be used by plugins include:
@@ -55,20 +69,6 @@ Each time a page or pages is removed from the wiki, the referenced function is c
         IkiWiki::hook(type => "render", id => "foo", call => \&render);
 
 Each time ikiwiki renders a change or addition (but not deletion) of a page to the wiki, the referenced function is called, and passed the name of the source file that was rendered.
-
-## Error handing in plugins
-
-While a plugin can call ikiwiki's error routine for a fatal error, for
-errors that aren't intended to halt the entire wiki build, including bad
-parameters passed to a [[PreProcessorDirective]], etc, it's better to just
-return the error message as the output of the plugin.
-
-## Html issues
-
-Note that if [[HTMLSanitization]] is enabled, html in 
-[[PreProcessorDirective]] output is sanitised, which may limit what your
-plugin can do. Also, the rest of the page content is not in html format at
-preprocessor time. Text output by a preprocessor directive will be passed through markdown along with the rest of the page.
 
 ## Wiki configuration
 
